fix border cv section mobile v

--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,20 +1,20 @@
 .main_about {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  //justify-content: space-evenly;
+
+  padding: 3rem;
+
+  text-align: justify;
+
+  @media (min-width: 768px) {
     justify-content: space-evenly;
+    // flex-wrap: nowrap;
 
-    padding: 3rem;
-
-    text-align: justify;
-    
-
-    @media (min-width: 768px) {
-        // flex-wrap: nowrap;
-
-       // flex-direction: column;
-        //justify-content: space-around;
-       // align-items: flex-start;
-    }
+    // flex-direction: column;
+    //justify-content: space-around;
+    // align-items: flex-start;
+  }
 }
 
 /*
@@ -32,81 +32,73 @@
 }
 */
 
-
-
 .main_about_title {
-    text-align: center;
-    align-self: center;
-    //justify-self: center;
-    width: 100vw;
-   // max-width: 50vw;
-   
-    color: var(--main-title-color);
-    font-family: var(--main-title-font);
-    text-transform: uppercase;
-    font-size: 2rem;
-    padding-bottom: 1.5rem;
+  text-align: center;
+  align-self: center;
+  //justify-self: center;
+  width: 100vw;
+  // max-width: 50vw;
 
-    @media (min-width: 768px) {
-        font-size: 2.5rem;
+  color: var(--main-title-color);
+  font-family: var(--main-title-font);
+  text-transform: uppercase;
+  font-size: 2rem;
+  padding-bottom: 1.5rem;
 
-    }
-    
+  @media (min-width: 768px) {
+    font-size: 2.5rem;
+  }
 }
 
 .about_section {
-    margin-bottom: 1rem;
-
+  margin-bottom: 1rem;
 }
 
 .about_subtitle {
-    
-    color: var(--main-title-color);
-    font-family: var(--main-title-font);
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    padding-bottom: 1.2rem;
-    padding-top: 0.5rem;
+  color: var(--main-title-color);
+  font-family: var(--main-title-font);
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  padding-bottom: 1.2rem;
+  padding-top: 0.5rem;
 }
 .languages_list {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-
 .profile-paragraph {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .skills_list {
-    display: flex;
-    text-align: center;
-    justify-content: space-evenly;
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
 
-    .skills_wrapper {
-        width: 50%;
-    }
-    .skills_wrapper2{
-        width: 50%
-    }
+  .skills_wrapper {
+    width: 50%;
+  }
+  .skills_wrapper2 {
+    width: 50%;
+  }
 }
 
 .experience_title {
-    font-weight: 600;
-    padding-top: 0.5rem;
+  font-weight: 600;
+  padding-top: 0.5rem;
 }
 .experience_subtitle {
-    text-transform: uppercase;
-    color: var(--main-subtitle-color);
-    padding-bottom: 0.5rem;
+  text-transform: uppercase;
+  color: var(--main-subtitle-color);
+  padding-bottom: 0.5rem;
 }
 
 .about_projects_link {
-    color: var(--main-subtitle-color) !important;
-    text-decoration: underline;
+  color: var(--main-subtitle-color) !important;
+  text-decoration: underline;
 }
-
 
 //wrappers
 
@@ -125,31 +117,27 @@
 }*/
 
 .wrapper_about_left {
-    border-left: solid 3px var(--main-title-color);
-    padding: 1.5rem;
+  border-left: solid 3px var(--main-title-color);
+  padding: 1.5rem;
 
-
-    @media (min-width: 768px) { 
-        width: 50%;
-        max-width: 30rem;
-    }
-    
+  @media (min-width: 768px) {
+    width: 50%;
+    max-width: 30rem;
+  }
 }
 
 .wrapper_about_right {
-    border-left: solid 3px var(--main-title-color);
-   padding: 1.5rem;
+  border-left: solid 3px var(--main-title-color);
+  padding: 1.5rem;
 
-    @media (min-width: 768px) { 
-        width: 50%;
-        max-width: 30rem;
-    }
-   
-    
+  @media (min-width: 768px) {
+    width: 50%;
+    max-width: 30rem;
+  }
 }
 
 //icons
 
-.icon{
-    height: 3rem;
+.icon {
+  height: 3rem;
 }
